--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt": "^1.0.4",
     "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "image-size": "^0.7.4",
     "less": "^3.9.0",
     "mime": "^2.4.2",
     "node-fetch": "^2.6.0",
