--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "archieml": "^0.4.2",
     "async": "^2.0.0-rc.1",
     "aws-sdk": "^2.2.45",
+    "axios": "^0.19.0",
     "babelify": "^10.0.0",
     "browser-pack-flat": "^3.0.5",
     "browserify": "^16.2.3",
     "chalk": "^2.4.2",
+    "cheerio": "^1.0.0-rc.3",
     "commonmark": "^0.24.0",
     "csv": "^5.1.1",
     "dot": "^1.1.2",
