--- a/project.json
+++ b/project.json
@@ -20,7 +20,9 @@
   "url": "https://apps.npr.org/book-concierge",
   "image": "assets/logo.png",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
-  "docs": {},
+  "docs": {
+    "about": "1oum9jMONZLRj0tVrS57kpZXp5LyPFswWEgnE5CnsoUo"
+  },
   "analytics": {
     "topicIDs": [],
     "primaryTopic": "",
