--- a/project.json
+++ b/project.json
@@ -18,7 +18,7 @@
   "title": "NPR's Book Concierge",
   "description": "",
   "url": "https://apps.npr.org/book-concierge",
-  "image": "assets/logo.png",
+  "image": "assets/social.jpg",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
   "docs": {
     "about": "1oum9jMONZLRj0tVrS57kpZXp5LyPFswWEgnE5CnsoUo"
