--- a/project.json
+++ b/project.json
@@ -17,7 +17,7 @@
   },
   "title": "NPR's Book Concierge",
   "description": "",
-  "url": "https://apps.npr.org/book-concierge",
+  "url": "https://apps.npr.org/best-books/",
   "image": "assets/social.jpg",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
   "docs": {
@@ -29,5 +29,5 @@
     "secondaryTopics": ["Books", "Arts \u0026amp; Life"]
   },
   "embedded": false,
-  "production": false
+  "production": true
 }
