Load environment variables from .env

--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
       "./tasks/lib/browserify-less",
       "./tasks/lib/browserify-text"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
