--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commonmark": "^0.24.0",
     "csv": "^5.1.1",
     "dot": "^1.1.2",
+    "eslint": "^7.2.0",
     "exorcist": "^1.0.1",
     "googleapis": "^45.0.0",
     "grunt": "^1.0.4",
