--- a/project.json
+++ b/project.json
@@ -18,7 +18,7 @@
   "title": "NPR's Book Concierge",
   "description": "",
   "url": "https://apps.npr.org/best-books/",
-  "image": "assets/social.jpg",
+  "image": "assets/social-2020.jpg",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
   "docs": {
     "about": "1oum9jMONZLRj0tVrS57kpZXp5LyPFswWEgnE5CnsoUo"
@@ -29,5 +29,5 @@
     "secondaryTopics": ["Books", "Arts \u0026amp; Life"]
   },
   "embedded": false,
-  "production": false
+  "production": true
 }
