--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "archieml": "^0.4.2",
     "async": "^2.0.0-rc.1",
     "aws-sdk": "^2.601.0",
-    "axios": "^0.19.1",
     "babelify": "^10.0.0",
     "browser-pack-flat": "^3.0.5",
     "browserify": "^16.2.3",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.3",
     "commonmark": "^0.24.0",
+    "crypto-js": "^4.1.1",
     "csv": "^5.3.1",
     "dot": "^1.1.3",
     "exorcist": "^1.0.1",
