--- a/project.json
+++ b/project.json
@@ -16,9 +16,9 @@
     "src/js/main.js": "build/app.js"
   },
   "title": "Books We Love",
-  "description": "",
+  "description": "Great reads, every year, thoughtfully curated by NPR",
   "url": "https://apps.npr.org/best-books/",
-  "image": "assets/social-2020.jpg",
+  "image": "assets/social-2021.jpg",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
   "docs": {
     "about": "1oum9jMONZLRj0tVrS57kpZXp5LyPFswWEgnE5CnsoUo"
@@ -29,5 +29,5 @@
     "secondaryTopics": ["Books", "Arts \u0026amp; Life"]
   },
   "embedded": false,
-  "production": false
+  "production": true
 }
