--- a/project.json
+++ b/project.json
@@ -16,7 +16,7 @@
     "src/js/main.js": "build/app.js"
   },
   "title": "Books We Love",
-  "description": "Great reads, every year, thoughtfully curated by NPR",
+  "description": "Great reads, thoughtfully curated by NPR",
   "url": "https://apps.npr.org/best-books/",
   "image": "assets/social-2021.jpg",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
