--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mime": "^2.4.2",
     "node-fetch": "^2.6.0",
     "opn": "^5.4.0",
+    "puppeteer": "^19.2.2",
     "resolve": "^1.14.2",
     "shelljs": "^0.8.4",
     "through2": "^3.0.1",
