--- a/project.json
+++ b/project.json
@@ -25,7 +25,7 @@
     "about": "1oum9jMONZLRj0tVrS57kpZXp5LyPFswWEgnE5CnsoUo"
   },
   "analytics": {
-    "topicIDs": [1032,1008],
+    "topicIDs": [1032,1008,1069977606],
     "primaryTopic": "Books",
     "secondaryTopics": ["Books", "Arts \u0026amp; Life"]
   },
