--- a/project.json
+++ b/project.json
@@ -6,7 +6,7 @@
     },
     "live": {
       "bucket": "apps.npr.org",
-      "path": "books-piano-test"
+      "path": "best-books"
     }
   },
   "styles": {
@@ -21,7 +21,7 @@
   "title": "Books We Love",
   "description": "Great reads, thoughtfully curated by NPR",
   "url": "https://apps.npr.org/best-books/",
-  "image": "assets/synced/social-2024.jpg",
+  "image": "assets/synced/social-2025.jpg",
   "sheets": ["1su06H8CvfSHtRkoMw4TDSJI51ND8mSqoxJgC_2g3pXw"],
   "docs": {
     "about": "1oum9jMONZLRj0tVrS57kpZXp5LyPFswWEgnE5CnsoUo"
